--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v1.9.8/dist/alpine.js"></script>
         
         <script>
-          var SWIPE_THRESHOLD = 50
+          var SWIPE_THRESHOLD = 50;
         </script>
         <script src="./Tocca.js"></script>
         <style>
