--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -134,7 +134,7 @@
               currShuffle: 0,
               shuffleArray: [],
               phrases: [
-{english:"part", spanish:"parte (f)",englishPhrase:"I don't know where this part goes", spanishPhrase:"no sé a dónde va esta parte",module:"module 01"},
+              {english:"part", spanish:"parte (f)",englishPhrase:"I don't know where this part goes", spanishPhrase:"no sé a dónde va esta parte",module:"module 01"},
 {english:"shape", spanish:"forma (f)",englishPhrase:"what shape is this?", spanishPhrase:"qué forma es esto?",module:"module 01"},
 {english:"towards", spanish:"hacia",englishPhrase:"we walked towards the exit", spanishPhrase:"caminamos hacia la salida",module:"module 01"},
 {english:"case", spanish:"caso (m)",englishPhrase:"in this case, it's obvious", spanishPhrase:"en este caso, es obvio",module:"module 01"},
@@ -164,7 +164,7 @@
 {english:"to slacken, loosen", spanish:"aflojar",englishPhrase:"I need to loosen my belt", spanishPhrase:"necesito aflojar mi cinturón",module:"module 01"},
 {english:"to board", spanish:"abordar",englishPhrase:"it's time to board the plane", spanishPhrase:"es hora de abordar el avión",module:"module 01"},
 {english:"to punish", spanish:"castigar",englishPhrase:"they're going to punish you", spanishPhrase:"van a castigarte",module:"module 01"},
-{english:"rejection", spanish:"rechazo (m)",englishPhrase:"the rejection was very hard to accept", spanishPhrase:"el rechaze fue muy dificil de aceptar",module:"module 01"},
+{english:"rejection", spanish:"rechazo (m)",englishPhrase:"the rejection was very hard to accept", spanishPhrase:"el rechazo fue muy dificil de aceptar",module:"module 01"},
 {english:"to rate, grade", spanish:"calificar",englishPhrase:"we can't rate the service until we see it", spanishPhrase:"no podemos calificar el servicio hasta que lo usemos",module:"module 01"},
 {english:"double", spanish:"doble (m)",englishPhrase:"I paid double", spanishPhrase:"pagé el doble",module:"module 01"},
 {english:"to wrap", spanish:"envolver",englishPhrase:"I don't have time to wrap the present", spanishPhrase:"no tengo tiempo para envolver el regalo",module:"module 01"},
@@ -234,6 +234,56 @@
 {english:"reaction", spanish:"reacción (f)",englishPhrase:"did you see their reaction?", spanishPhrase:"viste sus reacciones?",module:"module 02"},
 {english:"to grow, to grow up", spanish:"crecer",englishPhrase:"my grandfather grew up here", spanishPhrase:"mi abuelo creció aquí",module:"module 02"},
 {english:"ranch", spanish:"rancho (m)",englishPhrase:"my grandmother grew up on a ranch", spanishPhrase:"mi abuela creció en un rancho",module:"module 02"},
+{english:"to face, confront", spanish:"afrontar",englishPhrase:"you must face the reality of your problems", spanishPhrase:"tienes que afrontar la realidad de tus problemas",module:"module 03"},
+{english:"mass (religious)", spanish:"misa (f)",englishPhrase:"I'm catholic but I don't go to mass", spanishPhrase:"soy católico(a) pero no voy a misa",module:"module 03"},
+{english:"ant", spanish:"hormiga (f)",englishPhrase:"thousands of ants", spanishPhrase:"miles de hormigas",module:"module 03"},
+{english:"to scratch", spanish:"rascarse",englishPhrase:"I scratch my nose", spanishPhrase:"me rasco la nariz",module:"module 03"},
+{english:"microphone", spanish:"micrófono (m)",englishPhrase:"she needs the microphone to sing", spanishPhrase:"necesita el micrófono para cantar",module:"module 03"},
+{english:"to win, to earn", spanish:"ganar",englishPhrase:"she always has to win", spanishPhrase:"siempre tiene que ganar",module:"module 03"},
+{english:"competition", spanish:"concurso (m)",englishPhrase:"there's a competition every year", spanishPhrase:"hay un concurso cada año",module:"module 03"},
+{english:"winner", spanish:"ganador (m) ganadora (f)",englishPhrase:"and the winner of the competition is…", spanishPhrase:"y el ganador del concurso es…",module:"module 03"},
+{english:"sidewalk, footpath", spanish:"acera (f) banqueta (f)",englishPhrase:"I saw them walking on the sidewalk", spanishPhrase:"los vi caminando por la acera",module:"module 03"},
+{english:"cent", spanish:"centavo (m)",englishPhrase:"I need 50 cents more", spanishPhrase:"necesito cincuenta centavos mas",module:"module 03"},
+{english:"disappointment", spanish:"decepción",englishPhrase:"you can feel his disappointment", spanishPhrase:"puedes sentir su decepción",module:"module 03"},
+{english:"flood", spanish:"inundación (f)",englishPhrase:"there was a flood after the hurricane", spanishPhrase:"hubía una inundación después del huracán",module:"module 03"},
+{english:"champion", spanish:"campeón (m) campeona (f)",englishPhrase:"he's the world champion", spanishPhrase:"es el campeón mundial",module:"module 03"},
+{english:"harshly", spanish:"duramente",englishPhrase:"they spoke to me very harshly", spanishPhrase:"me hablaron muy duramente",module:"module 03"},
+{english:"example", spanish:"ejemplo (m)",englishPhrase:"it's a very good example", spanishPhrase:"es un ejemplo muy bueno",module:"module 03"},
+{english:"to shave", spanish:"afeitarse",englishPhrase:"I shave every morning before going to work", spanishPhrase:"me afeito todas las mañanas antes de ir al trabajo",module:"module 03"},
+{english:"razor", spanish:"cuchilla de afeitar",englishPhrase:"have you seen my razor?", spanishPhrase:"has visto mi cuchilla de afeitar?",module:"module 03"},
+{english:"only (only one)", spanish:"único (m) única (f)",englishPhrase:"it's the only one we have", spanishPhrase:"es el único que tenemos",module:"module 03"},
+{english:"reality", spanish:"realidad (f)",englishPhrase:"the reality is much worse", spanishPhrase:"la realidad es mucho peor",module:"module 03"},
+{english:"beginning", spanish:"principio (m)",englishPhrase:"everything was perfect in the beginning", spanishPhrase:"todo era perfecto al principio",module:"module 03"},
+{english:"enough", spanish:"suficiente",englishPhrase:"is it going to be enough?", spanishPhrase:"va a ser suficiente?",module:"module 03"},
+{english:"to lift", spanish:"levantar",englishPhrase:"three men should be enough to lift it", spanishPhrase:"tres hombres deberian ser suficientes para levantarlo",module:"module 03"},
+{english:"together", spanish:"juntos",englishPhrase:"do you think we can lift it together?", spanishPhrase:"crees que podemos levantarlo juntos?",module:"module 03"},
+{english:"strength, force", spanish:"fuerza (f)",englishPhrase:"I don't have enough strength to lift it", spanishPhrase:"no tengo suficiente fuerza para levantarlo",module:"module 03"},
+{english:"poor", spanish:"pobre (m)",englishPhrase:"the poor don't earn much money", spanishPhrase:"los pobres no ganan mucho dinero",module:"module 03"},
+{english:"time, age, period", spanish:"épocha (f)",englishPhrase:"it was an interesting time in history", spanishPhrase:"fue una épocha interesante en la historia",module:"module 03"},
+{english:"to pronounce", spanish:"pronunciar",englishPhrase:"how do you pronounce it?", spanishPhrase:"cómo se pronuncia?",module:"module 03"},
+{english:"war, warfare", spanish:"guerra (f)",englishPhrase:"the word 'guerra' is hard to pronounce", spanishPhrase:"la palabra 'guerra' es difícil pronunciar",module:"module 03"},
+{english:"experience", spanish:"experiencia (f)",englishPhrase:"I loved the experience and would like to do it again", spanishPhrase:"me encantó la experiencia y me gustaría hacerlo otra vez",module:"module 03"},
+{english:"discipline", spanish:"disciplina (f)",englishPhrase:"in my opinion, children need discipline", spanishPhrase:"en mi opinión, los niños necesitan disciplina",module:"module 03"},
+{english:"through", spanish:"a través de",englishPhrase:"he learns through repetition", spanishPhrase:"aprenda a través de repetición",module:"module 03"},
+{english:"measurement", spanish:"medida (f)",englishPhrase:"I need to know the exact measurements", spanishPhrase:"necesito saber las medidas exactas",module:"module 03"},
+{english:"to reach, to catch up, to hand", spanish:"alcanzar",englishPhrase:"I can't reach the sugar, can you help me?", spanishPhrase:"no puedo alconzar el azúcar.  me puedes ayudar?",module:"module 03"},
+{english:"some, someone", spanish:"alguno(a)",englishPhrase:"can I see some first?", spanishPhrase:"puedo ver algunos primero?",module:"module 03"},
+{english:"ancient", spanish:"antiguo(a)",englishPhrase:"we went to see some ancient temples in Belize", spanishPhrase:"fuimos a ver algunos templos antiguos en Belice",module:"module 03"},
+{english:"time, weather", spanish:"tiempo (m)",englishPhrase:"how's the weather there?", spanishPhrase:"cómo está el tiempo allí?",module:"module 03"},
+{english:"climate", spanish:"clima (f)",englishPhrase:"I live in a tropical climate", spanishPhrase:"vivo en un clima tropical",module:"module 03"},
+{english:"agreement", spanish:"acuerdo (m)",englishPhrase:"we reached an agreement", spanishPhrase:"alcanzamos un acuerdo",module:"module 03"},
+{english:"powerful", spanish:"poderoso(a)",englishPhrase:"she's a very powerful person in the company", spanishPhrase:"es una persona muy poderosa en la empresa",module:"module 03"},
+{english:"signature", spanish:"firma (f)",englishPhrase:"your signature here please", spanishPhrase:"tu firma aquí por favor",module:"module 03"},
+{english:"argument", spanish:"discusión (f)",englishPhrase:"they had an argument yesterday", spanishPhrase:"tuvieron una discusión ayer",module:"module 03"},
+{english:"to recommend", spanish:"recomendar",englishPhrase:"I recommend the book to everyone", spanishPhrase:"recomiendo el libro a todos",module:"module 03"},
+{english:"to complain", spanish:"quejarse",englishPhrase:"they love to complain about everything", spanishPhrase:"les encanta quejarse sobre todo",module:"module 03"},
+{english:"complaint", spanish:"queja (f)",englishPhrase:"I have some complaints", spanishPhrase:"tengo algunas quejas",module:"module 03"},
+{english:"container", spanish:"contendedor (m)",englishPhrase:"the container is too small", spanishPhrase:"el contendedor es demasiado pequeño",module:"module 03"},
+{english:"empty", spanish:"vacío(a)",englishPhrase:"the container is empty", spanishPhrase:"el contendedor está vacío",module:"module 03"},
+{english:"rope, cord", spanish:"cuerda (f)",englishPhrase:"we need rope to secure it properly", spanishPhrase:"necesitamos cuerda para asegurarla correctamente",module:"module 03"},
+{english:"training", spanish:"entrenamiento (m)",englishPhrase:"the training was very hard", spanishPhrase:"el entrenamiento fue muy duro",module:"module 03"},
+{english:"honest", spanish:"honesto(a)",englishPhrase:"I believe they are honest people", spanishPhrase:"creo que es gente honesta",module:"module 03"},
+{english:"trick", spanish:"truco (m)",englishPhrase:"it's a dishonest trick", spanishPhrase:"es un truco deshonesto",module:"module 03"},
        ],
       prevPhrase() {
         // this.currPhrase = (this.currPhrase+1) % this.phrases.length; 
