--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -261,7 +261,7 @@ SELECT {
 {english:"sidewalk, footpath", spanish:"acera (f) banqueta (f)",englishPhrase:"I saw them walking on the sidewalk", spanishPhrase:"los vi caminando por la acera",module:"module 03"},
 {english:"cent", spanish:"centavo (m)",englishPhrase:"I need 50 cents more", spanishPhrase:"necesito cincuenta centavos mas",module:"module 03"},
 {english:"disappointment", spanish:"decepción",englishPhrase:"you can feel his disappointment", spanishPhrase:"puedes sentir su decepción",module:"module 03"},
-{english:"flood", spanish:"inundación (f)",englishPhrase:"there was a flood after the hurricane", spanishPhrase:"había una inundación después del huracán",module:"module 03"},
+{english:"flood", spanish:"inundación (f)",englishPhrase:"there was a flood after the hurricane", spanishPhrase:"hubía una inundación después del huracán",module:"module 03"},
 {english:"champion", spanish:"campeón (m) campeona (f)",englishPhrase:"he's the world champion", spanishPhrase:"es el campeón mundial",module:"module 03"},
 {english:"harshly", spanish:"duramente",englishPhrase:"they spoke to me very harshly", spanishPhrase:"me hablaron muy duramente",module:"module 03"},
 {english:"example", spanish:"ejemplo (m)",englishPhrase:"it's a very good example", spanishPhrase:"es un ejemplo muy bueno",module:"module 03"},
@@ -286,7 +286,7 @@ SELECT {
 {english:"some, someone", spanish:"alguno(a)",englishPhrase:"can I see some first?", spanishPhrase:"puedo ver algunos primero?",module:"module 03"},
 {english:"ancient", spanish:"antiguo(a)",englishPhrase:"we went to see some ancient temples in Belize", spanishPhrase:"fuimos a ver algunos templos antiguos en Belice",module:"module 03"},
 {english:"time, weather", spanish:"tiempo (m)",englishPhrase:"how's the weather there?", spanishPhrase:"cómo está el tiempo allí?",module:"module 03"},
-{english:"climate", spanish:"clima (m)",englishPhrase:"I live in a tropical climate", spanishPhrase:"vivo en un clima tropical",module:"module 03"},
+{english:"climate", spanish:"clima (f)",englishPhrase:"I live in a tropical climate", spanishPhrase:"vivo en un clima tropical",module:"module 03"},
 {english:"agreement", spanish:"acuerdo (m)",englishPhrase:"we reached an agreement", spanishPhrase:"alcanzamos un acuerdo",module:"module 03"},
 {english:"powerful", spanish:"poderoso(a)",englishPhrase:"she's a very powerful person in the company", spanishPhrase:"es una persona muy poderosa en la empresa",module:"module 03"},
 {english:"signature", spanish:"firma (f)",englishPhrase:"your signature here please", spanishPhrase:"tu firma aquí por favor",module:"module 03"},
@@ -294,7 +294,7 @@ SELECT {
 {english:"to recommend", spanish:"recomendar",englishPhrase:"I recommend the book to everyone", spanishPhrase:"recomiendo el libro a todos",module:"module 03"},
 {english:"to complain", spanish:"quejarse",englishPhrase:"they love to complain about everything", spanishPhrase:"les encanta quejarse sobre todo",module:"module 03"},
 {english:"complaint", spanish:"queja (f)",englishPhrase:"I have some complaints", spanishPhrase:"tengo algunas quejas",module:"module 03"},
-{english:"container", spanish:"contenedor (m)",englishPhrase:"the container is too small", spanishPhrase:"el contenedor es demasiado pequeño",module:"module 03"},
+{english:"container", spanish:"contendedor (m)",englishPhrase:"the container is too small", spanishPhrase:"el contendedor es demasiado pequeño",module:"module 03"},
 {english:"empty", spanish:"vacío(a)",englishPhrase:"the container is empty", spanishPhrase:"el contendedor está vacío",module:"module 03"},
 {english:"rope, cord", spanish:"cuerda (f)",englishPhrase:"we need rope to secure it properly", spanishPhrase:"necesitamos cuerda para asegurarla correctamente",module:"module 03"},
 {english:"training", spanish:"entrenamiento (m)",englishPhrase:"the training was very hard", spanishPhrase:"el entrenamiento fue muy duro",module:"module 03"},
