--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -150,7 +150,7 @@ SELECT {
               workingPhrases: [],
               currDisplay: {english:"", spanish:"",englishPhrase:"", spanishPhrase:"",module:""},
               phrases: [
-              {english:"part", spanish:"parte (f)",englishPhrase:"I don't know where this part goes", spanishPhrase:"no sé a dónde va esta parte",module:"module 01"},
+{english:"part", spanish:"parte (f)",englishPhrase:"I don't know where this part goes", spanishPhrase:"no sé a dónde va esta parte",module:"module 01"},
 {english:"shape", spanish:"forma (f)",englishPhrase:"what shape is this?", spanishPhrase:"qué forma es esto?",module:"module 01"},
 {english:"towards", spanish:"hacia",englishPhrase:"we walked towards the exit", spanishPhrase:"caminamos hacia la salida",module:"module 01"},
 {english:"case", spanish:"caso (m)",englishPhrase:"in this case, it's obvious", spanishPhrase:"en este caso, es obvio",module:"module 01"},
@@ -261,7 +261,7 @@ SELECT {
 {english:"sidewalk, footpath", spanish:"acera (f) banqueta (f)",englishPhrase:"I saw them walking on the sidewalk", spanishPhrase:"los vi caminando por la acera",module:"module 03"},
 {english:"cent", spanish:"centavo (m)",englishPhrase:"I need 50 cents more", spanishPhrase:"necesito cincuenta centavos mas",module:"module 03"},
 {english:"disappointment", spanish:"decepción",englishPhrase:"you can feel his disappointment", spanishPhrase:"puedes sentir su decepción",module:"module 03"},
-{english:"flood", spanish:"inundación (f)",englishPhrase:"there was a flood after the hurricane", spanishPhrase:"hubía una inundación después del huracán",module:"module 03"},
+{english:"flood", spanish:"inundación (f)",englishPhrase:"there was a flood after the hurricane", spanishPhrase:"había una inundación después del huracán",module:"module 03"},
 {english:"champion", spanish:"campeón (m) campeona (f)",englishPhrase:"he's the world champion", spanishPhrase:"es el campeón mundial",module:"module 03"},
 {english:"harshly", spanish:"duramente",englishPhrase:"they spoke to me very harshly", spanishPhrase:"me hablaron muy duramente",module:"module 03"},
 {english:"example", spanish:"ejemplo (m)",englishPhrase:"it's a very good example", spanishPhrase:"es un ejemplo muy bueno",module:"module 03"},
@@ -286,7 +286,7 @@ SELECT {
 {english:"some, someone", spanish:"alguno(a)",englishPhrase:"can I see some first?", spanishPhrase:"puedo ver algunos primero?",module:"module 03"},
 {english:"ancient", spanish:"antiguo(a)",englishPhrase:"we went to see some ancient temples in Belize", spanishPhrase:"fuimos a ver algunos templos antiguos en Belice",module:"module 03"},
 {english:"time, weather", spanish:"tiempo (m)",englishPhrase:"how's the weather there?", spanishPhrase:"cómo está el tiempo allí?",module:"module 03"},
-{english:"climate", spanish:"clima (f)",englishPhrase:"I live in a tropical climate", spanishPhrase:"vivo en un clima tropical",module:"module 03"},
+{english:"climate", spanish:"clima (m)",englishPhrase:"I live in a tropical climate", spanishPhrase:"vivo en un clima tropical",module:"module 03"},
 {english:"agreement", spanish:"acuerdo (m)",englishPhrase:"we reached an agreement", spanishPhrase:"alcanzamos un acuerdo",module:"module 03"},
 {english:"powerful", spanish:"poderoso(a)",englishPhrase:"she's a very powerful person in the company", spanishPhrase:"es una persona muy poderosa en la empresa",module:"module 03"},
 {english:"signature", spanish:"firma (f)",englishPhrase:"your signature here please", spanishPhrase:"tu firma aquí por favor",module:"module 03"},
@@ -294,12 +294,62 @@ SELECT {
 {english:"to recommend", spanish:"recomendar",englishPhrase:"I recommend the book to everyone", spanishPhrase:"recomiendo el libro a todos",module:"module 03"},
 {english:"to complain", spanish:"quejarse",englishPhrase:"they love to complain about everything", spanishPhrase:"les encanta quejarse sobre todo",module:"module 03"},
 {english:"complaint", spanish:"queja (f)",englishPhrase:"I have some complaints", spanishPhrase:"tengo algunas quejas",module:"module 03"},
-{english:"container", spanish:"contendedor (m)",englishPhrase:"the container is too small", spanishPhrase:"el contendedor es demasiado pequeño",module:"module 03"},
+{english:"container", spanish:"contenedor (m)",englishPhrase:"the container is too small", spanishPhrase:"el contenedor es demasiado pequeño",module:"module 03"},
 {english:"empty", spanish:"vacío(a)",englishPhrase:"the container is empty", spanishPhrase:"el contendedor está vacío",module:"module 03"},
 {english:"rope, cord", spanish:"cuerda (f)",englishPhrase:"we need rope to secure it properly", spanishPhrase:"necesitamos cuerda para asegurarla correctamente",module:"module 03"},
 {english:"training", spanish:"entrenamiento (m)",englishPhrase:"the training was very hard", spanishPhrase:"el entrenamiento fue muy duro",module:"module 03"},
 {english:"honest", spanish:"honesto(a)",englishPhrase:"I believe they are honest people", spanishPhrase:"creo que es gente honesta",module:"module 03"},
 {english:"trick", spanish:"truco (m)",englishPhrase:"it's a dishonest trick", spanishPhrase:"es un truco deshonesto",module:"module 03"},
+{english:"just in case", spanish:"por si acaso",englishPhrase:"i'll stay just in case she needs me", spanishPhrase:"me quedaré por si acaso me necesita",module:"module 04"},
+{english:"anyway", spanish:"de todas maneras",englishPhrase:"i don't have enough money to buy it today anyway", spanishPhrase:"de todas maneras, no tengo suficiente dinero para comprarlo hoy",module:"module 04"},
+{english:"change", spanish:"cambio (m)",englishPhrase:"we need to make an important change", spanishPhrase:"necesitamos hacer un cambio importante",module:"module 04"},
+{english:"captain", spanish:"capitán (m)",englishPhrase:"he's the captain", spanishPhrase:"es el capitán",module:"module 04"},
+{english:"mistaken", spanish:"equivocado(a)",englishPhrase:"i'm sorry but you are mistaken", spanishPhrase:"lo siento pero estás equivocado",module:"module 04"},
+{english:"spring (season)", spanish:"primavera (f)",englishPhrase:"spring is my favorite season of the year", spanishPhrase:"la primavera es mi temporada favorita del año",module:"module 04"},
+{english:"ice", spanish:"hielo (m)",englishPhrase:"we've run out of ice", spanishPhrase:"nos hemos quedado sin hielo",module:"module 04"},
+{english:"card", spanish:"tarjeta (f)",englishPhrase:"a credit card and a debit card", spanishPhrase:"una tarjeta de débito y una tarjeta de crédito",module:"module 04"},
+{english:"relative (family)", spanish:"pariente (m)",englishPhrase:"they're my relatives", spanishPhrase:"son mis parientes",module:"module 04"},
+{english:"basic", spanish:"básico(a) (m)",englishPhrase:"it's something very basic to understand", spanishPhrase:"es algo muy básico de entender",module:"module 04"},
+{english:"fear", spanish:"temor (m)",englishPhrase:"the fear is the worst part", spanishPhrase:"el temor es la peor parte",module:"module 04"},
+{english:"symptom", spanish:"síntoma (m)",englishPhrase:"the doctor asked me what my symptoms are", spanishPhrase:"el doctor me preguntó cuáles son mis síntomas",module:"module 04"},
+{english:"creature", spanish:"criatura (f)",englishPhrase:"it was a creature from outer space", spanishPhrase:"era una criatura del espacio exterior",module:"module 04"},
+{english:"dawn, daybreak", spanish:"madrugada (f)",englishPhrase:"i get up at daybreak every day", spanishPhrase:"me levanto en la madrugada todos los días",module:"module 04"},
+{english:"cycle", spanish:"ciclo (m)",englishPhrase:"the cycle of life", spanishPhrase:"el ciclo de la vida",module:"module 04"},
+{english:"laugh", spanish:"risa (f)",englishPhrase:"i love your laugh", spanishPhrase:"me encanta tu risa",module:"module 04"},
+{english:"hero", spanish:"el héroe, la heroína",englishPhrase:"who is the hero in the film", spanishPhrase:"quién es el héroe de la pelicula?",module:"module 04"},
+{english:"court (law)", spanish:"tribunal (m)",englishPhrase:"this should be decided in court", spanishPhrase:"esto debería ser decidido en el tribunal",module:"module 04"},
+{english:"obvious", spanish:"obvio(a)",englishPhrase:"it's obvious that i'm right", spanishPhrase:"es obvio que tengo rázon",module:"module 04"},
+{english:"embarrassment", spanish:"vergüenza (f)",englishPhrase:"her embarrassment was obvious to everyone", spanishPhrase:"su vergüenza era obvia para todos",module:"module 04"},
+{english:"injection", spanish:"inyección (f)",englishPhrase:"i hate injections!", spanishPhrase:"¡odio las inyecciónes!",module:"module 04"},
+{english:"cellar, warehouse", spanish:"bodega (f)",englishPhrase:"we have to order it from the warehouse", spanishPhrase:"tenemos que pedirlo de la bodega",module:"module 04"},
+{english:"stock, broth (cooking)", spanish:"caldo (m)",englishPhrase:"the soup is made with chicken brot", spanishPhrase:"la sopa se hace con caldo de pollo",module:"module 04"},
+{english:"tasty, delicious", spanish:"sabroso(a)",englishPhrase:"the fish stock is very tasty", spanishPhrase:"el caldo de pescado es muy sabroso",module:"module 04"},
+{english:"to sweat", spanish:"sudar",englishPhrase:"i'm sweating like crazy with this heat", spanishPhrase:"estoy sudando como loco(a) con este calor",module:"module 04"},
+{english:"reward", spanish:"recompensa (f)",englishPhrase:"i wonder what her reward will be?", spanishPhrase:"me pregunto cuál sera su recompensa?",module:"module 04"},
+{english:"pyramid", spanish:"pirámide (f)",englishPhrase:"yesterday we visited some ancient pyramids", spanishPhrase:"ayer visitamos algunas pirámides antiguas",module:"module 04"},
+{english:"ground, soil, land", spanish:"tierra (f)",englishPhrase:"the land here is volcanic", spanishPhrase:"la tierra aquí es volcánica",module:"module 04"},
+{english:"fertile", spanish:"fértil",englishPhrase:"the soil here is very rich", spanishPhrase:"la tierra aquí es muy fértil",module:"module 04"},
+{english:"sailor", spanish:"marinero(a)",englishPhrase:"the sailors were very happy when they saw land", spanishPhrase:"los marineros estuvieron muy feliz cuando vieron tierra",module:"module 04"},
+{english:"basement", spanish:"sótano (m)",englishPhrase:"he works in the basement", spanishPhrase:"trabaja en el sótano",module:"module 04"},
+{english:"stain", spanish:"mancha (f)",englishPhrase:"there's a stain on your dress", spanishPhrase:"hay una mancha en tu vestido",module:"module 04"},
+{english:"pillow", spanish:"almohada (f)",englishPhrase:"there's a stain on the pillow", spanishPhrase:"hay una mancha en la almohada",module:"module 04"},
+{english:"can, tin can", spanish:"lata (f)",englishPhrase:"it comes in a can", spanishPhrase:"viene en una lata",module:"module 04"},
+{english:"joke", spanish:"broma (f)",englishPhrase:"it's just a joke", spanishPhrase:"es solo una broma",module:"module 04"},
+{english:"anonymous", spanish:"anónimo(a)",englishPhrase:"no one knows, it's anonymous", spanishPhrase:"nadie sabe, es anónimo",module:"module 04"},
+{english:"zipper", spanish:"cierre (m)",englishPhrase:"the zipper of my jacket is broken", spanishPhrase:"el cierre de mi chaqueta está roto",module:"module 04"},
+{english:"truck", spanish:"camión (m)",englishPhrase:"he drives an enormous truck", spanishPhrase:"maneja un camion enorme",module:"module 04"},
+{english:"musician", spanish:"músico (m/f)",englishPhrase:"the musicians are really good", spanishPhrase:"los músicos son muy buenos",module:"module 04"},
+{english:"strategy", spanish:"estrategia (f)",englishPhrase:"yes i think it's a very good strategy", spanishPhrase:"si, creo que es una estrategia muy buena",module:"module 04"},
+{english:"comfortable", spanish:"cómodo(a)",englishPhrase:"this sofa is very comfortable", spanishPhrase:"este sofá es muy cómodo",module:"module 04"},
+{english:"uncomfortable", spanish:"incómodo(a)",englishPhrase:"the chair is very uncomfortable", spanishPhrase:"la silla es muy incómoda",module:"module 04"},
+{english:"covered", spanish:"cubierto(a)",englishPhrase:"the table outside is covered", spanishPhrase:"la mesa afuera está cubierta",module:"module 04"},
+{english:"to be used to", spanish:"acostumbrar",englishPhrase:"i'm not used to this", spanishPhrase:"no estoy acostumbrado(a) a esto",module:"module 04"},
+{english:"sand", spanish:"arena (f)",englishPhrase:"the sand is very soft on this beach", spanishPhrase:"la arena es muy suave en esta playa",module:"module 04"},
+{english:"shout, scream", spanish:"grito (m)",englishPhrase:"i heard a scream from the house", spanishPhrase:"oí un grito desde la casa",module:"module 04"},
+{english:"to shout", spanish:"gritar",englishPhrase:"i heard someone shouting", spanishPhrase:"oí a alguien gritando",module:"module 04"},
+{english:"border (country)", spanish:"frontera (f)",englishPhrase:"a country must protect it's borders", spanishPhrase:"una país tiene que proteger sus fronteras",module:"module 04"},
+{english:"attack", spanish:"ataque (m)",englishPhrase:"an attack at daybreak", spanishPhrase:"un ataque en la madrugada",module:"module 04"},
+{english:"justified", spanish:"justificado(a)",englishPhrase:"the attack was not justified", spanishPhrase:"el ataque no fue justificado",module:"module 04"},
        ],
       prevPhrase() {
         // this.currPhrase = (this.currPhrase+1) % this.phrases.length; 
