--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>dave scobie was here: travel photos</title>
-<meta name="description" content="Personal website for some of my favorite photos from our ongoing travel around the world.">
-<meta name="keywords" content="dave scobie, scobie was here, travel photos, asia travel photos, mexico travel photos, usa travel photos">
-<link href="iconmoonstyle.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v1.9.8/dist/alpine.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <title>dave scobie was here: travel photos</title>
+    <meta name="description" content="Personal website for some of my favorite photos from our ongoing travel around the world.">
+    <meta name="keywords" content="dave scobie, scobie was here, travel photos, asia travel photos, mexico travel photos, usa travel photos">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <link href="iconmoonstyle.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v1.9.8/dist/alpine.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
 <style>
 
 html, body {
   background-color: #ffeead;
+  background-color: #eee;
   background-color: #666;
-  margin: 5px;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   color: #eee;
@@ -42,7 +47,11 @@ html, body {
   cursor: hand;
   color: #cc9;
 }
-.container > div > a { border-radius: inherit; }
+.container > div > a { 
+    width: 100%;
+    height: 100%; 
+    border-radius: inherit; 
+}
 
 .container > div > a > img {
     width: 100%;
@@ -52,6 +61,8 @@ html, body {
 }
 
 .container > div {
+  width: 100%;
+  height: 100%;
   border-radius: inherit;
   display: flex;
   justify-content: center;
@@ -103,7 +114,9 @@ html, body {
     height: 99%;
     background-color: #eee;
     border-radius: 8px;
-    padding: 3px;
+    padding-left: 3px;
+    padding-top: 3px;
+    padding-right: 3px;
     margin: 0;
     display: grid;
     grid-gap: 3px;
@@ -121,11 +134,15 @@ html, body {
     height: 99%;
     background-color: #eee;
     border-radius: 8px;
-    padding: 3px;
+    padding-left: 3px;
+    padding-top: 3px;
+    padding-right: 3px;
+    padding-bottom: 3px;
+    margin: 0;
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 25% 25% 25% 24%;
+    grid-template-rows: 25% 25% 25% 25%;
     grid-template-areas: 
       "c1 c1 c2 c2"
       "c1 c1 c2 c2"
@@ -137,7 +154,10 @@ html, body {
     height: 99%;
     background-color: #eee;
     border-radius: 8px;
-    padding: 3px;
+    padding-left: 3px;
+    padding-top: 3px;
+    padding-right: 3px;
+    margin: 0;
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(4, 1fr);
@@ -153,7 +173,10 @@ html, body {
     height: 99%;
     background-color: #eee;
     border-radius: 8px;
-    padding: 3px;
+    padding-left: 3px;
+    padding-top: 3px;
+    padding-right: 3px;
+    margin: 0;
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(3, 1fr);
@@ -169,7 +192,11 @@ html, body {
     height: 99%;
     background-color: #eee;
     border-radius: 8px;
-    padding: 3px;
+    padding-left: 3px;
+    padding-top: 3px;
+    padding-right: 3px;
+    padding-bottom: 3px;
+    margin: 0;
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(4, 1fr);
@@ -258,14 +285,17 @@ html, body {
   font-size: 1.7em;
 }
 }
-
+.pagefill {
+    width: 100%;
+    height: 100%;
+}
 </style>
 
 </head>
 
 <body>
 
-<div x-data="images()" x-html="currWebsite" x-ref="website" x-init="() => {init()}">
+<div class="pagefill" x-data="images()" x-html="currWebsite" x-ref="website" x-init="() => {init()}">
 </div>
 
 <div class="landscape">
@@ -320,6 +350,7 @@ html, body {
             },
             buildContainer() {
                 var currItem = this.randomIntFromInterval(0,this.containers.length-1);
+                // currItem = 4;
                 var currContainer = this.containers[currItem];
 
                 this.currWebsite = this.buildImages(currContainer.displayCount, currContainer.logoSpot, currContainer.CSSname);
